--- a/src/components/avatars-app/styles.module.css
+++ b/src/components/avatars-app/styles.module.css
@@ -5,3 +5,11 @@
     gap: 40px;
     position: relative;
 }
+
+.fixed {
+    position: fixed;
+    bottom: 40px;
+    left: 0;
+    margin: 0 auto;
+    right: 0;
+}
