--- a/src/components/button/styles.module.css
+++ b/src/components/button/styles.module.css
@@ -5,17 +5,15 @@
     text-transform: uppercase;
     color: white;
     width: 320px;
-    height: 40px;
-    background-color: #5E217A;
+    background-color: #5e217a;
     border-radius: 6px;
-    position: fixed;
-    bottom: 40px;
-    left: 36%;
     font-weight: 900;
     font-size: 18px;
     line-height: 1.16;
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
+    padding: 10px 0 9px 0;
+    height: fit-content;
 }
 
 .button:hover {
