add loader img, avatars context

--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -6,9 +6,12 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.25);
     display: block;
+    opacity: 1;
+    transition: all 250ms ease-in-out;
 }
 
 .modal {
+    opacity: 1;
     display: flex;
     padding: 40px 70px;
     background-color: white;
@@ -25,6 +28,8 @@
     bottom: 0;
     margin: 0 auto;
     max-width: 460px;
+    transition: all 250ms ease-in-out;
+
 }
 
 .message {
@@ -38,4 +43,5 @@
 
 .isHidden {
     display: none;
+    opacity: 0;
 }
