--- a/src/components/avatar/styles.module.css
+++ b/src/components/avatar/styles.module.css
@@ -35,3 +35,53 @@
     width: 100%;
     height: 100%;
 }
+
+.isHidden {
+    display: none;
+}
+
+.spinContainer {
+    width: 240px;
+    height: 240px;
+    border: 4px solid #5e217a;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.spin {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.spin div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 4px solid #5e217a;
+    border-radius: 50%;
+    animation: spin 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #5e217a transparent transparent transparent;
+}
+.spin div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.spin div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+.spin div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
